# IOT-Gateway-Device-Manager

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: toolchain-arm-linux-gnueabihf.cmake
fuzz/: fuzz_protocol.c
include/: device_registry.h  gateway_protocol.h  nvs_store.h  state_machine.h  test.h  watchdog.h
src/: device_registry.c  gateway_protocol.c  main.c  nvs_store.c  state_machine.c  watchdog.c
tests/: CMakeLists.txt  test_device_registry.c  test_nvs_store.c  test_protocol.c  test_state_machine.c  test_watchdog.c
tools/: device_sim.py
